# TortLanguage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: c-cpp.yml
docs/: Arrays.md  Branching.md  Functions.md  GettingStarted.md  InputOutput.md  Loops.md  Operators.md  README.md  TypeConversion.md  Types.md  Var-Declarations.md  VarDeclarations.md  _sidebar.md  index.html
example/: main.ll  main.s  main.tk  main.tt
gtests/: CMakeLists.txt  tests.cpp
gtests/tests/BinaryOpTest/: binaryop.tt
gtests/tests/FuncTest/: func.tt
gtests/tests/IfTest/: if.tt
gtests/tests/PrintTest/: print.tt
src/: AST.cpp  AST.h  Compiler.cpp  Compiler.h  LLVMManager.h  Lexer.cpp  Lexer.h  MyAST.h  Parser.cpp  Parser.h  SymbolTable.cpp  SymbolTable.h  SymbolTableManager.cpp  SymbolTableManager.h  Token.h  TokenStream.cpp  TokenStream.h  externs.cpp  externs.h
src/AST/: AST.cpp  AST.h  BinaryExprAST.cpp  BinaryExprAST.h  BlockAST.cpp  BlockAST.h  BreakAST.cpp  BreakAST.h  CallExprAST.cpp  CallExprAST.h  CastAST.cpp  CastAST.h  CompletionInstruction.cpp  CompletionInstruction.h  ConsoleOutputExprAST.cpp  ConsoleOutputExprAST.h  ContinueAST.cpp  ContinueAST.h  FunctionAST.cpp  FunctionAST.h  GotoAST.cpp  GotoAST.h  IfAST.cpp  IfAST.h  IndexExprAST.cpp  IndexExprAST.h  LLVMCallFuncAST.cpp  LLVMCallFuncAST.h  LLVMValueAST.cpp  LLVMValueAST.h  LiteralExprAST.cpp  LiteralExprAST.h  ProtFunctionAST.cpp  ProtFunctionAST.h  ReturnAST.cpp  ReturnAST.h  UnaryExprAST.cpp  UnaryExprAST.h  VarDeclAST.cpp  VarDeclAST.h  (+4 more)
tests/: tests.cpp
(+4 files in other folders)
